change about to about us

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!--about-->
         <div id="about" class="clear services section block">
 		   <div class="block content-960 center-relative">	
-          	<h2 class="section-title montserrat-font">ABOUT</h2>
+          	<h2 class="section-title montserrat-font">ABOUT US</h2>
 			<div class="title-separator"></div>                     
             <div class="two_third top-20">
 				<p class="info">Inspiring and Equipping Entrepreneurs to Lead</p>
