updated copy for ABOUT

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 			<div class="title-separator"></div>                     
             <div class="two_third top-20">
 				<p class="info">Inspiring and Equipping Entrepreneurs to Lead</p>
-				Most conferences for entrepreneurs in the Bay Area revolve around funding, getting noticed, and the X's and O's of running a company. We believe that at the core of every successful venture, is great leadership.
+				ELEO is unique among tech conference in the Valley. Instead of talking fundraising, pitching, or the X's and O's of running a company, we focus on something more fundamental: Leadership. We believe that every startup needs strong leadership, and that leadership can be learned and honed over time. 
 				</br>
 				</br>
-				Most conferences for entrepreneurs in the Bay Area revolve around funding, getting noticed, and the X's and O's of running a company. We believe that at the core of every successful venture, is great leadership.
+				Each year, we bring the best leaders from around the Valley together to a one-day conference. At ELEO, you won't learn theory, but practical advice from founders, VCs and CEOs about how to actually run your company or organization.
 				</div>
 			
 			</div>
