--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
  <!--WATSI-->
         <div id="watsi" class="clear about section block">
         <div class="block content-960 center-relative"> 
-            <h2 class="section-title montserrat-font" style="color:white;">WATSI</h2>
+            <h2 class="section-title montserrat-font" style="color:white;">GIVING</br>BACK</h2>
             <div class="title-separator"></div>                     
                 <p class="info bottom-20" style="color:white;">ELEO 2014 will donate all proceeds to Watsi patients</p>       
                 
