adding speaker pages and style

--- a/index.html
+++ b/index.html
@@ -163,20 +163,14 @@
                 <img src="images/pat-gelsinger.jpg">
                 <h1 class="single-blog-title montserrat-font top-20">PAT GELSINGER</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">CEO VMware</li></ul>
-                Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B.
-                
-                <a href="#inline-1" rel="prettyPhoto" >Learn More</a>
-                <div id="inline-1" class="hide" style="display:none;">
-                    <p>This is inline content opened in prettyPhoto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
+                Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B. <a href="pat.html">Learn more</a>
             </div>
 
             <div class="one_half last">
                 <img src="images/kevin-compton.jpg">
                 <h1 class="single-blog-title montserrat-font top-20">KEVIN COMPTON</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Kleiner Perkins Caufield & Byers</li></ul>
-                Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B. <a href="pat.html">Learn More</a> 
+                Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B. 
             </div>
             <div class="clear"></div>
             
@@ -601,7 +595,7 @@
 <script type="text/javascript" src="js/jquery.vticker-min.js"></script>
 <script type="text/javascript" src="php/scriptsData.php"></script>
 <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>     
-<script type="text/javascript" src="js/main.js"></script>   
+<script type="text/javascript" src="js/main.js"></script>    
 
 <script src="js/classie.js"></script>
 <script src="js/uiMorphingButton_fixed.js"></script>
