adding speakers pages and hover effect on speaker pictures

--- a/chi-hua-chien.html
+++ b/chi-hua-chien.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Pat Gelsinger : ELEO Conference</title>
+    <title>Chi-Hua Chien : ELEO Conference</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="ELEO Conference - Inspiring and Equipping Entrepreneurs to Lead" />
     <meta name="keywords" content="leadership, entrepreneur, silicon valley, san jose, conference, yahoo, facebook, google, vc, community, meetup" />
@@ -31,32 +31,28 @@
             </head>
             <body class="single-post">
 
+
             <!--Single Post-->
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" style="position: fixed;top: 0; border:none; right: 0;"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="index.html#speakers" class="button green slow-scroll"><</a><a href="kevin-compton.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="kevin-compton.html" class="button green slow-scroll"><</a><a href="maria-zhang.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
-                        <img src="images/pat-gelsinger.jpg" alt="" />
-                        <h1 class="single-blog-title montserrat-font top-20">PAT GELSINGER</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">CEO VMware</li></ul> 
+                        <img src="images/chi-hua-chien.jpg" alt="" />
+                        <h1 class="single-blog-title montserrat-font top-20">CHI-HUA CHIEN</h1>
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder, Radar Partners</li></ul> 
+                        
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                        Pat Gelsinger joined VMware in September 2012, bringing more than 30 years of technology and leadership experience. Most recently, Gelsinger led EMC's Information Infrastructure Products business as president and COO, overseeing engineering and operations for information storage, data computing, backup and recovery, RSA security and enterprise solutions as well as the office of the CTO.
+                        Chi-Hua Chien joined Kleiner Perkins Caufield & Byers in 2007 and focuses on investments in consumer technology. Chi-Hua serves on the board of directors or works closely with the teams at Chegg (CHGG), Chill, textPlus, Inspirato, Karma Science (acquired by FB), Klout, Level, Path, Spotify, Twitter (TWTR) and Zaarly.
                         <br />
                         <br />
-                        Prior to EMC, Gelsinger spent 30 years in numerous technical, management and executive roles at Intel, where he began his career. He led Intel's Digital Enterprise Group, the company's largest business unit and responsible for enterprise products including the Xeon and Itanium processors, as senior vice president and co-general manager, and he also led the Desktop Products Group responsible for desktop processors, chipsets and motherboards for consumer and commercial customers. Gelsinger was Intel's first CTO, and as the head of Intel Labs he led many of the company's research initiatives. He was also the architect of the origin    al 80486 processor and a design engineer on the 80386 and 80286 processor design teams.
+                        Before coming to KPCB, Chi-Hua worked with Accel Partners as a venture advisor and associate. He originated Accel’s investments in Facebook (FB) and AdECN (acquired by MSFT) and worked on the firm’s investments in AdMob (acquired by GOOG), fbFund, Glam, Trulia (TRLA) and YuMe Networks. Before becoming an investor, Chi-Hua was an early employee or co-founder of several startups, three of which achieved successful exits between US$30 million and US$300 million. Chi-Hua was the director of marketing at Coremetrics (acquired by IBM), where he led the marketing and inside sales teams and served as interim CFO for Coremetrics through two rounds of venture funding. He also was part of the early teams at MyListo (as a founder) and eCoverage.
                         <br />
                         <br />
-                        Gelsinger holds six patents in the areas of VLSI design, computer architecture and communications, is a well-known speaker on technology trends, and has received a variety of industry awards. He earned an associate's degree from Lincoln Technical Institute in 1979, a bachelor's degree from Santa Clara University in 1983 (magna cum laude) and a master's degree from Stanford University in 1985, all in electrical engineering. In 2008 he was named a Fellow of the IEEE and awarded an Honorary Doctorate of Letters in 2008 from William Jessup University.
-                        <br />
-                        <br />
-                        Linda and Pat have been married 31 years, have four children, two are married and two grandchild. Pat serves as the chair for the William Jessup University Board of Trustees. Pat is the author of “Balancing Family, Faith and Work” published by Life Journey 2003, an imprint of Cook Communications Ministries and “The Juggling Act” in 2008 by Cook Communications.
-                        <br />
-                        <br />
-                        <a href="#register" class="button green slow-scroll">HOME</a>
+                        Chi-Hua has an M.S. degree in industrial engineering, a B.S. degree in industrial engineering and a B.A. degree in economics, all from Stanford University. At Stanford, he was named a Mayfield Fellow and President’s Scholar. Chi-Hua also earned an M.B.A. from the Stanford Graduate School of Business, where he was an Arjay Miller Scholar. Chi-Hua was named one of the Top VCs Under 35 by VC Journal and a member of the Elite Eight VCs To Watch by Forbes.
                     </div>
 
 
