--- a/kevin-compton.html
+++ b/kevin-compton.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Pat Gelsinger : ELEO Conference</title>
+    <title>Kevin Compton : ELEO Conference</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="ELEO Conference - Inspiring and Equipping Entrepreneurs to Lead" />
     <meta name="keywords" content="leadership, entrepreneur, silicon valley, san jose, conference, yahoo, facebook, google, vc, community, meetup" />
@@ -31,32 +31,28 @@
             </head>
             <body class="single-post">
 
+
             <!--Single Post-->
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" style="position: fixed;top: 0; border:none; right: 0;"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="index.html#speakers" class="button green slow-scroll"><</a><a href="kevin-compton.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="pat.html" class="button green slow-scroll"><</a><a href="chi-hua-chien.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
-                        <img src="images/pat-gelsinger.jpg" alt="" />
-                        <h1 class="single-blog-title montserrat-font top-20">PAT GELSINGER</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">CEO VMware</li></ul> 
+                        <img src="images/kevin-compton.jpg" alt="" />
+                        <h1 class="single-blog-title montserrat-font top-20">KEVIN COMPTON</h1>
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder, Radar Partners</li></ul> 
+                        
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                        Pat Gelsinger joined VMware in September 2012, bringing more than 30 years of technology and leadership experience. Most recently, Gelsinger led EMC's Information Infrastructure Products business as president and COO, overseeing engineering and operations for information storage, data computing, backup and recovery, RSA security and enterprise solutions as well as the office of the CTO.
+                        Before co-founding Radar Partners, an early stage venture capital partnership, Kevin was a partner with Kleiner Perkins Caufield & Byers, one of Silicon Valley’s most successful high technology venture capital firms for almost twenty years. Kevin and his partners invested in many of the most powerful and high profile start-ups over the past 30 years, including Google, America On-Line, Compaq Computers, Lotus Development, Sun Microsystems, Intuit, VeriSign, Tandem Computers, Genentech, Citrix Systems, Netscape Communications, Amazon.com and Juniper Networks. These companies employee over 300,000 people, have annual sales in excess of $100 billion and carry a public market value in excess of $300 billion.
                         <br />
                         <br />
-                        Prior to EMC, Gelsinger spent 30 years in numerous technical, management and executive roles at Intel, where he began his career. He led Intel's Digital Enterprise Group, the company's largest business unit and responsible for enterprise products including the Xeon and Itanium processors, as senior vice president and co-general manager, and he also led the Desktop Products Group responsible for desktop processors, chipsets and motherboards for consumer and commercial customers. Gelsinger was Intel's first CTO, and as the head of Intel Labs he led many of the company's research initiatives. He was also the architect of the origin    al 80486 processor and a design engineer on the 80386 and 80286 processor design teams.
+                        Kevin has been featured in many technology publications, has been profiled in Fortune, Forbes and Inc. Magazine, and has been ranked as one of the top Venture Capitalists in the world over the last decade. The Forbes “Midas Touch” ranking of top investors has named Kevin as one of the top private investors in the world on numerous occasions ranking him in the top ten three times.
                         <br />
                         <br />
-                        Gelsinger holds six patents in the areas of VLSI design, computer architecture and communications, is a well-known speaker on technology trends, and has received a variety of industry awards. He earned an associate's degree from Lincoln Technical Institute in 1979, a bachelor's degree from Santa Clara University in 1983 (magna cum laude) and a master's degree from Stanford University in 1985, all in electrical engineering. In 2008 he was named a Fellow of the IEEE and awarded an Honorary Doctorate of Letters in 2008 from William Jessup University.
-                        <br />
-                        <br />
-                        Linda and Pat have been married 31 years, have four children, two are married and two grandchild. Pat serves as the chair for the William Jessup University Board of Trustees. Pat is the author of “Balancing Family, Faith and Work” published by Life Journey 2003, an imprint of Cook Communications Ministries and “The Juggling Act” in 2008 by Cook Communications.
-                        <br />
-                        <br />
-                        <a href="#register" class="button green slow-scroll">HOME</a>
+                        Outside of work Kevin enjoys family time, playing hockey and working with youth sports. His passion for sports extends into the professional sports arena as well. Kevin was the co-owner of the National Hockey League San Jose Sharks, the American Hockey League Worcester Sharks, and Sharks Sports & Entertainment from 2001 – 2012.
                     </div>
 
 
@@ -67,6 +63,7 @@
 
             <!--Footer-->
 
+<!--            <div class="footer-copyright center-text">© Copyright 2014 ELEO Conference | All right reserved</div>-->
 
 
             <!--Load JavaScript-->
