adding speaker pages and links

--- a/brad-lomenick.html
+++ b/brad-lomenick.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Maria Zhang : ELEO Conference</title>
+    <title>Brad Lomenick : ELEO Conference</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="ELEO Conference - Inspiring and Equipping Entrepreneurs to Lead" />
     <meta name="keywords" content="leadership, entrepreneur, silicon valley, san jose, conference, yahoo, facebook, google, vc, community, meetup" />
@@ -36,7 +36,7 @@
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" style="position: fixed;top: 0; border:none; right: 0;"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="maria-zhang.html" class="button green slow-scroll"><</a><a href="#.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="maria-zhang.html" class="button green slow-scroll"><</a><a href="andy-wood.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
                         <img src="images/brad-lomenick.jpg" alt="" />
