--- a/index.html
+++ b/index.html
@@ -235,7 +235,14 @@
                 Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B. <a href="pat.html">Learn More</a>
             </div>
             <div class="one_half last">
-                <img src="images/andy-wood.jpg">
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
+                    <img src="images/andy-wood.jpg" alt="">    
+                    <a class="preview absolute shadow" href="andy-wood.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                        <span class="work_item_text" style="top: 165px;">READ BIO</span>
+                    </a>                           
+                </li>
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">ANDY WOOD</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Founder & Pastor, South Bay Church</li></ul>
                 Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church. <a href="pat.html">Learn More</a>
@@ -243,13 +250,27 @@
             <div class="clear"></div>
             
             <div class="one_half">
-                <img src="images/david-lane.jpg">
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
+                    <img src="images/david-lane.jpg" alt="">    
+                    <a class="preview absolute shadow" href="david-lane.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                        <span class="work_item_text" style="top: 165px;">READ BIO</span>
+                    </a>                           
+                </li>
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">DAVID LANE</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Partner, Kleiner Perkins Caufield & Byers</li></ul>
                 Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B. <a href="pat.html">Learn More</a>
             </div>
             <div class="one_half last">
-                <img src="images/victor-ho.jpg">
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
+                    <img src="images/victor-ho.jpg" alt="">    
+                    <a class="preview absolute shadow" href="victor-ho.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                        <span class="work_item_text" style="top: 165px;">READ BIO</span>
+                    </a>                           
+                </li>
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">VICTOR HO</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Kleiner Perkins Caufield & Byers</li></ul>
                 Pat was named to become CEO of VMware Sept 2012. VMware is the worldwide leader in virtualization and cloud computing technologies with 2012 revenues of $4.5B. <a href="pat.html">Learn More</a>
@@ -257,7 +278,14 @@
             <div class="clear"></div>
             
             <div class="one_half">
-                <img src="images/tim-howes.jpg">
+                <ul class="gallery image_slider">
+                <li style="width: 100%">
+                    <img src="images/tim-howes.jpg" alt="">    
+                    <a class="preview absolute shadow" href="tim-howes.html" style="height: 360px; display: none; opacity: 0.75;"> 
+                        <span class="work_item_text" style="top: 165px;">READ BIO</span>
+                    </a>                           
+                </li>
+                </ul>
                 <h1 class="single-blog-title montserrat-font top-20">TIM HOWES</h1>
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Founder of Rockmelt, currently VP of Engineering</li></li></ul>
                 Tim is an entrepreneur and computer scientist. His last company, Rockmelt, was purchased by Yahoo, where Tim is currently VP of Engineering for Mobile and Emerging Products. <a href="pat.html">Learn More</a>
