--- a/andy-wood.html
+++ b/andy-wood.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Pat Gelsinger : ELEO Conference</title>
+    <title>Andy Wood : ELEO Conference</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="ELEO Conference - Inspiring and Equipping Entrepreneurs to Lead" />
     <meta name="keywords" content="leadership, entrepreneur, silicon valley, san jose, conference, yahoo, facebook, google, vc, community, meetup" />
@@ -31,32 +31,41 @@
             </head>
             <body class="single-post">
 
+
             <!--Single Post-->
             <div class="clear block">	
                 <div class="block content-960 center-relative">
                 <a href="index.html#speakers"><img src="images/x.png" style="position: fixed;top: 0; border:none; right: 0;"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="tim-howes.html" class="button green slow-scroll"><</a><a href="kevin-compton.html" class="button green slow-scroll" style="border-left:none;">></a></div>
+                <div class=" top-50 bottom-20" style="text-align:right;"><a href="brad-lomenick.html" class="button green slow-scroll"><</a><a href="david-lane.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
-                        <img src="images/pat-gelsinger.jpg" alt="" />
-                        <h1 class="single-blog-title montserrat-font top-20">PAT GELSINGER</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">CEO VMware</li></ul> 
+                        <img src="images/andy-wood.jpg" alt="" />
+                        <h1 class="single-blog-title montserrat-font top-20">ANDY WOOD</h1>
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Former president and current strategic advisor, Catalyst</li></ul> 
+                        
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                        Pat Gelsinger joined VMware in September 2012, bringing more than 30 years of technology and leadership experience. Most recently, Gelsinger led EMC's Information Infrastructure Products business as president and COO, overseeing engineering and operations for information storage, data computing, backup and recovery, RSA security and enterprise solutions as well as the office of the CTO.
+                    For the last 11 years, Brad Lomenick has served as lead visionary and president of Catalyst, one of America’s largest movements of young Christian leaders. Catalyst’s mission is to equip, inspire, and release the next generation of leaders through events, resources, consulting, content and connecting. In the last fourteen years, Catalyst has convened hundreds of thousands of leaders through high energy and experiential conferences across the United States.
                         <br />
                         <br />
-                        Prior to EMC, Gelsinger spent 30 years in numerous technical, management and executive roles at Intel, where he began his career. He led Intel's Digital Enterprise Group, the company's largest business unit and responsible for enterprise products including the Xeon and Itanium processors, as senior vice president and co-general manager, and he also led the Desktop Products Group responsible for desktop processors, chipsets and motherboards for consumer and commercial customers. Gelsinger was Intel's first CTO, and as the head of Intel Labs he led many of the company's research initiatives. He was also the architect of the origin    al 80486 processor and a design engineer on the 80386 and 80286 processor design teams.
+                        Brad recently moved into a Strategic Advisor and Brand Ambassador role, allowing him more time to speak, write, travel and play a broader role for the Catalyst movement and community.
                         <br />
                         <br />
-                        Gelsinger holds six patents in the areas of VLSI design, computer architecture and communications, is a well-known speaker on technology trends, and has received a variety of industry awards. He earned an associate's degree from Lincoln Technical Institute in 1979, a bachelor's degree from Santa Clara University in 1983 (magna cum laude) and a master's degree from Stanford University in 1985, all in electrical engineering. In 2008 he was named a Fellow of the IEEE and awarded an Honorary Doctorate of Letters in 2008 from William Jessup University.
+                        Brad is also author of the groundbreaking book, The Catalyst Leader: Eight Essentials for Becoming a Change Maker, from Thomas Nelson. And is working on his next leadership book entitled “Hustle. Hungry. Humble” due to release in the spring of 2015.
                         <br />
                         <br />
-                        Linda and Pat have been married 31 years, have four children, two are married and two grandchild. Pat serves as the chair for the William Jessup University Board of Trustees. Pat is the author of “Balancing Family, Faith and Work” published by Life Journey 2003, an imprint of Cook Communications Ministries and “The Juggling Act” in 2008 by Cook Communications.
+                        Prior to running Catalyst, Brad spent five years involved in the growth of the nationally acclaimed Life@Work magazine and was a management consultant with Cornerstone Group, where he worked with a variety of companies, organizations, and nonprofit enterprises. Before that, he served as foreman for Lost Valley Ranch, a four-diamond working guest ranch in the mountains of Colorado.
                         <br />
                         <br />
-                        <a href="#register" class="button green slow-scroll">HOME</a>
+                        Brad has had the privilege of interviewing and interacting with dozens of the world’s leading thinkers—including Malcolm Gladwell, Seth Godin, Rick Warren, Jack Dorsey, Dave Ramsey, Patrick Lencioni, Simon Sinek, Marcus Buckingham, Jim Collins and more—through Catalyst and its different media and event outlets. He blogs about leadership, creativity, innovation, teamwork, personal growth, and more at bradlomenick.com.
+                        <br />
+                        <br />
+                        Brad serves on the advisory boards for Plywood People, the A21 Campaign, Red Eye Inc., Values Partnerships, The Bible Series, No Losing, and Praxis. He holds a bachelor’s degree from the University of Oklahoma and currently resides just outside of Atlanta, Georgia.
+                        <br />
+                        <br />
+                        You can follow Brad on Twitter and Instagram @bradlomenick and connect with Catalyst at catalystconference.com. 
+                        
                     </div>
 
 
