finished up bios

--- a/andy-wood.html
+++ b/andy-wood.html
@@ -41,31 +41,12 @@
                     <div class="one_third">
                         <img src="images/andy-wood.jpg" alt="" />
                         <h1 class="single-blog-title montserrat-font top-20">ANDY WOOD</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Former president and current strategic advisor, Catalyst</li></ul> 
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & Pastor, South Bay Church</li></ul> 
                         
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    For the last 11 years, Brad Lomenick has served as lead visionary and president of Catalyst, one of America’s largest movements of young Christian leaders. Catalyst’s mission is to equip, inspire, and release the next generation of leaders through events, resources, consulting, content and connecting. In the last fourteen years, Catalyst has convened hundreds of thousands of leaders through high energy and experiential conferences across the United States.
-                        <br />
-                        <br />
-                        Brad recently moved into a Strategic Advisor and Brand Ambassador role, allowing him more time to speak, write, travel and play a broader role for the Catalyst movement and community.
-                        <br />
-                        <br />
-                        Brad is also author of the groundbreaking book, The Catalyst Leader: Eight Essentials for Becoming a Change Maker, from Thomas Nelson. And is working on his next leadership book entitled “Hustle. Hungry. Humble” due to release in the spring of 2015.
-                        <br />
-                        <br />
-                        Prior to running Catalyst, Brad spent five years involved in the growth of the nationally acclaimed Life@Work magazine and was a management consultant with Cornerstone Group, where he worked with a variety of companies, organizations, and nonprofit enterprises. Before that, he served as foreman for Lost Valley Ranch, a four-diamond working guest ranch in the mountains of Colorado.
-                        <br />
-                        <br />
-                        Brad has had the privilege of interviewing and interacting with dozens of the world’s leading thinkers—including Malcolm Gladwell, Seth Godin, Rick Warren, Jack Dorsey, Dave Ramsey, Patrick Lencioni, Simon Sinek, Marcus Buckingham, Jim Collins and more—through Catalyst and its different media and event outlets. He blogs about leadership, creativity, innovation, teamwork, personal growth, and more at bradlomenick.com.
-                        <br />
-                        <br />
-                        Brad serves on the advisory boards for Plywood People, the A21 Campaign, Red Eye Inc., Values Partnerships, The Bible Series, No Losing, and Praxis. He holds a bachelor’s degree from the University of Oklahoma and currently resides just outside of Atlanta, Georgia.
-                        <br />
-                        <br />
-                        You can follow Brad on Twitter and Instagram @bradlomenick and connect with Catalyst at catalystconference.com. 
-                        
+                    Andy and his wife, Stacie, along with 3 other families moved to California to start South Bay Church in 2009 with a dream of impacting the Silicon Valley with God's love. Currently, South Bay Church has a campus in Sunnyvale and North San Jose and reaches over 1,600 people per week. Andy and Stacie have been married for 11 years and have two sons, Caedmon (7) and Sammy (6) and one daughter, Karis (6months). Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church.
                     </div>
 
 
