--- a/chi-hua-chien.html
+++ b/chi-hua-chien.html
@@ -41,7 +41,7 @@
                     <div class="one_third">
                         <img src="images/chi-hua-chien.jpg" alt="" />
                         <h1 class="single-blog-title montserrat-font top-20">CHI-HUA CHIEN</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder, Radar Partners</li></ul> 
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">General Partner, KPCB</li></ul> 
                         
                     </div>
 
