--- a/david-lane.html
+++ b/david-lane.html
@@ -41,31 +41,24 @@
                     <div class="one_third">
                         <img src="images/david-lane.jpg" alt="" />
                         <h1 class="single-blog-title montserrat-font top-20">DAVID LANE</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Former president and current strategic advisor, Catalyst</li></ul> 
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & Partner, Diamondhead Ventures</li></ul> 
                         
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    For the last 11 years, Brad Lomenick has served as lead visionary and president of Catalyst, one of America’s largest movements of young Christian leaders. Catalyst’s mission is to equip, inspire, and release the next generation of leaders through events, resources, consulting, content and connecting. In the last fourteen years, Catalyst has convened hundreds of thousands of leaders through high energy and experiential conferences across the United States.
-                        <br />
-                        <br />
-                        Brad recently moved into a Strategic Advisor and Brand Ambassador role, allowing him more time to speak, write, travel and play a broader role for the Catalyst movement and community.
-                        <br />
-                        <br />
-                        Brad is also author of the groundbreaking book, The Catalyst Leader: Eight Essentials for Becoming a Change Maker, from Thomas Nelson. And is working on his next leadership book entitled “Hustle. Hungry. Humble” due to release in the spring of 2015.
-                        <br />
-                        <br />
-                        Prior to running Catalyst, Brad spent five years involved in the growth of the nationally acclaimed Life@Work magazine and was a management consultant with Cornerstone Group, where he worked with a variety of companies, organizations, and nonprofit enterprises. Before that, he served as foreman for Lost Valley Ranch, a four-diamond working guest ranch in the mountains of Colorado.
-                        <br />
-                        <br />
-                        Brad has had the privilege of interviewing and interacting with dozens of the world’s leading thinkers—including Malcolm Gladwell, Seth Godin, Rick Warren, Jack Dorsey, Dave Ramsey, Patrick Lencioni, Simon Sinek, Marcus Buckingham, Jim Collins and more—through Catalyst and its different media and event outlets. He blogs about leadership, creativity, innovation, teamwork, personal growth, and more at bradlomenick.com.
-                        <br />
-                        <br />
-                        Brad serves on the advisory boards for Plywood People, the A21 Campaign, Red Eye Inc., Values Partnerships, The Bible Series, No Losing, and Praxis. He holds a bachelor’s degree from the University of Oklahoma and currently resides just outside of Atlanta, Georgia.
-                        <br />
-                        <br />
-                        You can follow Brad on Twitter and Instagram @bradlomenick and connect with Catalyst at catalystconference.com. 
-                        
+                    Over the past 25 years, David has created, built and financed start-up companies, which has resulted in multiple successful public offerings and acquisitions. He has directly managed venture capital funds totaling in excess of $2 Billion.
+                    <br/>
+                    <br/>
+                    Today, David focuses his investments in cloud-enabling infrastructure software, information security, healthcare IT, Internet of Things and commercializing disruptive IT technologies spun out of leading research universities.
+                    <br/>
+                    <br/>
+                    David founded Diamondhead Ventures, which invested in AuthenTec (acquired by Apple), Cavium (IPO), Danger (acquired by Microsoft), Entercept Security Technologies (acquired by McAfee), Passmark (acquired by RSA Security), Reactivity (acquired by Cisco) and Truviso (acquired by Cisco).  He is a Partner at ONSET Ventures.  David started his investment career as a senior venture capital investment officer at the Harvard Management Company, where he focused on making direct investments in seed to later stage opportunities in the IT and life science sectors. David’s other investments include: Applied Immune Sciences (IPO), Harmonic (IPO), Kofax Image Products (IPO), TriQuint Semiconductor (IPO), NexGen (IPO), Quidel (IPO), Viewlogic Systems (IPO) and Harbridge Merchant Services (acquired by First Data Corporation).
+                    <br/>
+                    <br/>
+                    Early in his career, David was an electrical engineer working on the TOW missile system at Hughes Aircraft Company.  He then went to work for IBM, selling IBM’s broad product line offering in hardware, software and services to Fortune 100 accounts.
+                    <br/>
+                    <br/>
+                    David earned a B.S.E.E. degree from the University of Southern California and an M.B.A. from the Harvard Business School. He serves on the University of Southern California Engineering School’s Board of Counselors, the Engineering School Dean’s industry advisory board, as well as several non-profit boards.     
                     </div>
 
 
