--- a/tim-howes.html
+++ b/tim-howes.html
@@ -41,31 +41,18 @@
                     <div class="one_third">
                         <img src="images/tim-howes.jpg" alt="" />
                         <h1 class="single-blog-title montserrat-font top-20">TIM HOWES</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Former president and current strategic advisor, Catalyst</li></ul> 
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & CTO, Rockmelt and Opsware; currently VP of Engineering, Yahoo!</li></ul> 
                         
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    For the last 11 years, Brad Lomenick has served as lead visionary and president of Catalyst, one of America’s largest movements of young Christian leaders. Catalyst’s mission is to equip, inspire, and release the next generation of leaders through events, resources, consulting, content and connecting. In the last fourteen years, Catalyst has convened hundreds of thousands of leaders through high energy and experiential conferences across the United States.
-                        <br />
-                        <br />
-                        Brad recently moved into a Strategic Advisor and Brand Ambassador role, allowing him more time to speak, write, travel and play a broader role for the Catalyst movement and community.
-                        <br />
-                        <br />
-                        Brad is also author of the groundbreaking book, The Catalyst Leader: Eight Essentials for Becoming a Change Maker, from Thomas Nelson. And is working on his next leadership book entitled “Hustle. Hungry. Humble” due to release in the spring of 2015.
-                        <br />
-                        <br />
-                        Prior to running Catalyst, Brad spent five years involved in the growth of the nationally acclaimed Life@Work magazine and was a management consultant with Cornerstone Group, where he worked with a variety of companies, organizations, and nonprofit enterprises. Before that, he served as foreman for Lost Valley Ranch, a four-diamond working guest ranch in the mountains of Colorado.
-                        <br />
-                        <br />
-                        Brad has had the privilege of interviewing and interacting with dozens of the world’s leading thinkers—including Malcolm Gladwell, Seth Godin, Rick Warren, Jack Dorsey, Dave Ramsey, Patrick Lencioni, Simon Sinek, Marcus Buckingham, Jim Collins and more—through Catalyst and its different media and event outlets. He blogs about leadership, creativity, innovation, teamwork, personal growth, and more at bradlomenick.com.
-                        <br />
-                        <br />
-                        Brad serves on the advisory boards for Plywood People, the A21 Campaign, Red Eye Inc., Values Partnerships, The Bible Series, No Losing, and Praxis. He holds a bachelor’s degree from the University of Oklahoma and currently resides just outside of Atlanta, Georgia.
-                        <br />
-                        <br />
-                        You can follow Brad on Twitter and Instagram @bradlomenick and connect with Catalyst at catalystconference.com. 
-                        
+                    Timothy A Howes, Ph.D., is an entrepreneur and computer scientist. His last company, Rockmelt, was purchased by Yahoo, where Tim is currently VP of Engineering for Mobile and Emerging Products. Prior to Rockmelt, Tim co-founded and was CTO of Opsware (formerly Loudcloud), sold to Hewlett Packard in 2007 for $1.65B. At HP, Tim was CTO of HP Software, HP's enterprise software division. 
+                    <br/>
+                    <br/>
+                    Prior to Opsware, he held senior positions at Netscape and AOL. Tim co-invented LDAP, the Internet directory protocol. He has written two books on directories and over 20 Internet Requests for Comment on various subjects. He has served on the boards of several public and private companies and non-profit organizations, including Blue Coat Systems, Homestead Technologies, the Internet Architecture Board, SF Jazz, and the University of Michigan College of Engineering. 
+                    <br/>
+                    <br/>
+                    Tim received his Ph.D. in computer science from the University of Michigan. He lives in Los Altos Hills with his wife, two daughters, and four dogs.
                     </div>
 
 
