--- a/maria-zhang.html
+++ b/maria-zhang.html
@@ -41,7 +41,7 @@
                     <div class="one_third">
                         <img src="images/maria.jpg" alt="" />
                         <h1 class="single-blog-title montserrat-font top-20">MARIA ZHANG</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder, Radar Partners</li></ul> 
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & CEO, Alike; Sr Director of Engineering, Yahoo!</li></ul> 
                         
                     </div>
 
