--- a/victor-ho.html
+++ b/victor-ho.html
@@ -41,34 +41,19 @@
                     <div class="one_third">
                         <img src="images/victor-ho.jpg" alt="" />
                         <h1 class="single-blog-title montserrat-font top-20">VICTOR HO</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Former president and current strategic advisor, Catalyst</li></ul> 
+                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & CEO, Fivestars</li></ul> 
                         
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    For the last 11 years, Brad Lomenick has served as lead visionary and president of Catalyst, one of America’s largest movements of young Christian leaders. Catalyst’s mission is to equip, inspire, and release the next generation of leaders through events, resources, consulting, content and connecting. In the last fourteen years, Catalyst has convened hundreds of thousands of leaders through high energy and experiential conferences across the United States.
-                        <br />
-                        <br />
-                        Brad recently moved into a Strategic Advisor and Brand Ambassador role, allowing him more time to speak, write, travel and play a broader role for the Catalyst movement and community.
-                        <br />
-                        <br />
-                        Brad is also author of the groundbreaking book, The Catalyst Leader: Eight Essentials for Becoming a Change Maker, from Thomas Nelson. And is working on his next leadership book entitled “Hustle. Hungry. Humble” due to release in the spring of 2015.
-                        <br />
-                        <br />
-                        Prior to running Catalyst, Brad spent five years involved in the growth of the nationally acclaimed Life@Work magazine and was a management consultant with Cornerstone Group, where he worked with a variety of companies, organizations, and nonprofit enterprises. Before that, he served as foreman for Lost Valley Ranch, a four-diamond working guest ranch in the mountains of Colorado.
-                        <br />
-                        <br />
-                        Brad has had the privilege of interviewing and interacting with dozens of the world’s leading thinkers—including Malcolm Gladwell, Seth Godin, Rick Warren, Jack Dorsey, Dave Ramsey, Patrick Lencioni, Simon Sinek, Marcus Buckingham, Jim Collins and more—through Catalyst and its different media and event outlets. He blogs about leadership, creativity, innovation, teamwork, personal growth, and more at bradlomenick.com.
-                        <br />
-                        <br />
-                        Brad serves on the advisory boards for Plywood People, the A21 Campaign, Red Eye Inc., Values Partnerships, The Bible Series, No Losing, and Praxis. He holds a bachelor’s degree from the University of Oklahoma and currently resides just outside of Atlanta, Georgia.
-                        <br />
-                        <br />
-                        You can follow Brad on Twitter and Instagram @bradlomenick and connect with Catalyst at catalystconference.com. 
-                        
+                    Victor Ho is the CEO and co-founder of FiveStars, the largest loyalty program for local businesses in the US. FiveStars originally launched out of Y Combinator’s Winter 2011 class, and has raised $19 million in outside funding.
+                    <br/>
+                    <br/>
+                    Prior to starting FiveStars, Victor was an investment banker at Goldman Sachs within the Financial Institutions Group. He then joined McKinsey & Company as a management consultant in New York. At McKinsey, Victor helped build out loyalty programs and managed customer retention programs for Fortune 500 companies.
+                    <br/>
+                    <br/>
+                    Victor holds three degrees from the University of California, Berkeley, where he tripled majored in Industrial Engineering, Rhetoric and Business Administration. In 2012, he was named to Fortune's "30 Under 30 in Technology". Victor has an insatiable love for sour candy and can solve a Rubik's cube in 45 seconds.
                     </div>
-
-
                 </div>
 
             </div>
